Handle hakijaryhma sort and remove entity with getters/setters